fix console on mobile

--- a/static/css/console.css
+++ b/static/css/console.css
@@ -10,6 +10,7 @@
 .right-col {
   background-color: #fff;
   right: 0px;
+  padding-bottom: 134px;
 }
 
 .right-col iframe {
